# insys

./: .gitignore
backend/: README.md  main.py  notes.md  pyproject.toml  requirements.txt
backend/handlers/: process.py  upload.py
backend/lib/: ai_processor.py
backend/schemas/: __init__.py
backend/utils/: logger.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorMessage.tsx  FileUploadSection.tsx  Header.tsx  Message.tsx  QuerySection.tsx  ResultsSection.tsx
frontend/src/componets/: Header.tsx  Message.tsx  Spinner.css  Spinner.tsx
frontend/src/interfaces/: index.ts
frontend/src/services/: api.ts
